--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>P I Z Z A</title> 
+    <title>P I Z Z A ~ K A W A I I </title> 
 </head>
 <body>
- 
+  <h1>P I Z Z A ~ K A W A I I</h1>
 </body>
 </html>
