--- a/index.html
+++ b/index.html
@@ -12,5 +12,38 @@
 </head>
 <body>
   <h1>P I Z Z A ~ K A W A I I</h1>
+
+  <form>
+    <div class="form-group">
+      <h3>enter your name for the order</h3>
+      <input placeholder="name" class="form-control" id="name" type="text">
+    </div>
+
+    <div class="form-group">
+      <h3>choose your toppings</h3>
+    <select class="form-control" multiple id="toppings">
+      <optgroup label="toppings" data-max-options="4">
+      <option selected="selected"><strong>t o p p i n g s</strong></option>
+      <option value="corn">Corn</option>
+      <option value="miso">Miso</option>
+      <option value="pollock">Pollock roe</option>
+      <option value="mushroom">Mushroom</option>
+    </select>
+    </div>
+
+    <div class="form-group">
+      <h3>select your size</h3>
+    <select class="form-control" id="size">
+      <option selected="selected"><strong>s i z e</strong></option>
+      <option value="personal">personal</option>
+      <option value="small">small</option>
+      <option value="medium">medium</option>
+      <option value="large">large</option>
+    </select>
+    </div>
+
+    <button type="submit" class="btn btn-default">Submit</button>
+
+  </form>
 </body>
 </html>
