add 1st constuctor to js file, starting to write function to calculate the cost of pizza size

--- a/index.html
+++ b/index.html
@@ -6,15 +6,36 @@
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>P I Z Z A ~ K A W A I I </title>
+    <title>P I Z Z A ~ PLZ </title>
     <h1>P I Z Z A ~ K A W A I I</h1>
-    <h6>call now for very much speedy delivery 1-800-kawaii</h6>
+      <img src="img/face.png">
 </head>
-
-
 <body>
 
+  <!-- <div class="row">
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+  </div> -->
+
   <form>
+
+  <div class="card">
     <div class="form-group">
       <h4>enter your name for the order</h4>
       <input placeholder="name" class="form-control" id="name" type="text">
@@ -47,7 +68,7 @@
 
   </form>
   </div>
-
+</div>
   <div id="price">
         <h2>Your pizza is:</h2>
         <div id="cost"></div>  
