--- a/index.html
+++ b/index.html
@@ -7,60 +7,41 @@
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>P I Z Z A ~ PLZ </title>
-    <h1>P I Z Z A ~ K A W A I I</h1>
-      <img src="img/face.png">
 </head>
+
 <body>
+  <h1>K A W A I I ~ P I Z Z A </h1>
+  <div class="container">
+      <img src="img/face.png">
+      <h5><em>create your own happiness</em></h5>
+  </div>
 
-  <!-- <div class="row">
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
+  <div class="well">
   <form>
-
-  <div class="card">
-    <div class="form-group">
+    <!-- <div class="form-group">
       <h4>enter your name for the order</h4>
-      <input placeholder="name" class="form-control" id="name" type="text">
-    </div>
-
-    <div class="form-group">
-      <h4>choose your toppings</h4>
-    <select class="form-control" multiple id="toppings">
-      <optgroup label="toppings" data-max-options="4">
-      <option selected="selected"><strong>t o p p i n g s</strong></option>
-      <option value="corn">Corn</option>
-      <option value="miso">Miso</option>
-      <option value="pollock">Pollock roe</option>
-      <option value="mushroom">Mushroom</option>
-    </select>
-    </div>
+      <input placeholder="n a m e" class="form-control" id="name" type="text">
+    </div> -->
 
     <div class="form-group">
       <h4>select your size</h4>
     <select class="form-control" id="size">
       <option selected="selected"><strong>s i z e</strong></option>
-      <option value="personal">personal</option>
-      <option value="small">small</option>
-      <option value="medium">medium</option>
-      <option value="large">large</option>
+      <option value="personal">personal ~ feeds 1</option>
+      <option value="small">small ~ feeds 1-2</option>
+      <option value="medium">medium ~ feeds 1-3</option>
+      <option value="large">large ~ feeds 1-4</option>
+    </select>
+    </div>
+
+    <div class="form-group">
+      <h4>choose your toppings (to select more than one, use shift or drag) </h4>
+    <select class="form-control" multiple id="toppings">
+      <optgroup label="t o p p i n g s" data-max-options="4">
+      <option value="corn">Corn</option>
+      <option value="miso">Miso</option>
+      <option value="pollock">Pollock roe</option>
+      <option value="mushroom">Mushroom</option>
     </select>
     </div>
 
@@ -69,9 +50,9 @@
   </form>
   </div>
 </div>
-  <div id="price">
+  <!-- <div id="price">
         <h2>Your pizza is:</h2>
-        <div id="cost"></div>  
+        <div id="cost"></div>   -->
 </div>         
 </body>
 </html>
