--- a/index.html
+++ b/index.html
@@ -9,6 +9,45 @@
     <title>P I Z Z A ~ PLZ </title>
 </head>
 
+<!-- n a v b a r begins  -->
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Kawaii Pizza</a>
+    </div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Menu</a><span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Coupons</a></li>
+      </ul>
+      <div class="navbar-form navbar-left">
+        <button type="submit" class="btn btn-default">Order Online</button>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">About</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Locations<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li>Portland</a></li>
+            <li>Seattle</a></li>
+            <li>Tokyo</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+</header>
+
 <body>
   <h1>K A W A I I ~ P I Z Z A </h1>
   <div class="container">
